close #6 Admin: populate upload folders datatable

--- a/surf/src/main/amp/web/components/uploader-plus/css/uploader-plus-admin.css
+++ b/surf/src/main/amp/web/components/uploader-plus/css/uploader-plus-admin.css
@@ -37,3 +37,11 @@
 .folders-list .yui-dt .yui-dt-message td {
     border: medium none;
 }
+
+.folders-list .action {
+    visibility: hidden;
+}
+
+.folders-list .yui-dt-highlighted .action {
+    visibility: visible;
+}
