work in progress #7 admin: upload folder edit

--- a/surf/src/main/amp/web/components/uploader-plus/css/uploader-plus-admin.css
+++ b/surf/src/main/amp/web/components/uploader-plus/css/uploader-plus-admin.css
@@ -45,3 +45,7 @@
 .folders-list .yui-dt-highlighted .action {
     visibility: visible;
 }
+
+div.yui-u.edit-metadata.flat-button {
+    display: none;
+}
