close #12: Admin: "allowed types" field: retrieve dynamically

--- a/surf/src/main/amp/web/components/uploader-plus/css/uploader-plus-admin.css
+++ b/surf/src/main/amp/web/components/uploader-plus/css/uploader-plus-admin.css
@@ -50,6 +50,6 @@ div.yui-u.edit-metadata.flat-button {
     display: none;
 }
 
-.edit-upload-folder-dialog select {
+.form-container select.supported-types-select {
     width: 100%;
 }
