--- a/surf/src/main/amp/web/components/uploader-plus/css/uploader-plus.css
+++ b/surf/src/main/amp/web/components/uploader-plus/css/uploader-plus.css
@@ -11,3 +11,9 @@ span.fileupload-typeInfo-span.uploader-plus {
     font-family: Open Sans Bold, Arial, sans-serif;
     font-weight: normal !important;
 }
+
+.fake-hidden {
+    visibility: hidden;
+    overflow: hidden;
+    height: 0;
+}
