close #61 Cannot upload more than two files on 5.0.a/b

--- a/surf/src/main/amp/web/components/uploader-plus/css/uploader-plus.css
+++ b/surf/src/main/amp/web/components/uploader-plus/css/uploader-plus.css
@@ -15,6 +15,7 @@ span.fileupload-typeInfo-span.uploader-plus {
     left: 40px;
 }
 
+.flash-upload span.fileupload-filesize-span.uploader-plus,
 .dnd-upload span.fileupload-filesize-span.uploader-plus {
     right: 8px;
     top: 22px;
