--- a/surf/src/main/amp/web/components/uploader-plus/css/uploader-plus-admin.css
+++ b/surf/src/main/amp/web/components/uploader-plus/css/uploader-plus-admin.css
@@ -50,7 +50,7 @@ div.yui-u.edit-metadata.flat-button {
     display: none;
 }
 
-.form-container select.supported-types-select {
+.form-container select.supported-types-select, .form-container select.supported-proxy-types-select  {
     width: 100%;
     height: 20em;
 }
